# ROS2-ARM

./: .gitignore  COORDINATE_FIX_NOTES.md  HARDWARE_MIGRATION_GUIDE.md  PROJECT_FLOWCHART.md  README.md  frames_2025-09-28_16.22.42.gv  frames_2025-11-08_12.30.40.gv  frames_2025-11-08_12.51.53.gv  start_alexa.sh  test_alexa_request.json
.colcon/: defaults.yaml
.github/: copilot-instructions.md
install/: local_setup.sh  setup.sh
install/arduinobot_bringup/share/arduinobot_bringup/: local_setup.sh  package.sh
install/arduinobot_controller/lib/arduinobot_controller/: slider_control
install/arduinobot_controller/share/arduinobot_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/arduinobot_cpp_examples/lib/arduinobot_cpp_examples/: simple_action_client_node  simple_action_server_node  simple_moveit_interface  simple_parameter  simple_publisher  simple_service_client  simple_service_server  simple_subscriber
install/arduinobot_cpp_examples/share/arduinobot_cpp_examples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/arduinobot_description/share/arduinobot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/arduinobot_moveit/share/arduinobot_moveit/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/arduinobot_msgs/share/arduinobot_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/arduinobot_py_examples/share/arduinobot_py_examples/: package.sh
install/arduinobot_remote/lib/arduinobot_remote/: alexa_interface.py  task_server_node
install/arduinobot_remote/share/arduinobot_remote/: package.sh
log/: latest_build
src/arduinobot_bringup/: CMakeLists.txt  package.xml
src/arduinobot_bringup/launch/: simulated_robot.launch.py
src/arduinobot_controller/: package.xml
src/arduinobot_controller/config/: arduinobot_controllers.yaml
src/arduinobot_controller/launch/: controller.launch.py
src/arduinobot_cpp_examples/: CMakeLists.txt  package.xml
src/arduinobot_description/: package.xml
src/arduinobot_description/launch/: display.launch.py  gazebo.launch.py
src/arduinobot_description/urdf/: arduinobot.urdf.xacro  arduinobot_gazebo.xacro  arduinobot_ros2_control.xacro
src/arduinobot_description/worlds/: pick_and_place.sdf
src/arduinobot_moveit/: CMakeLists.txt  package.xml
src/arduinobot_moveit/config/: arduinobot.srdf  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml
src/arduinobot_msgs/: CMakeLists.txt  package.xml
src/arduinobot_msgs/action/: ObjectDetection.action
src/arduinobot_py_examples/: package.xml  setup.py
src/arduinobot_remote/: ALEXA_README.md  CMakeLists.txt  alexa_intents.json  package.xml
src/arduinobot_remote/arduinobot_remote/: alexa_interface.py  simple_alexa_server.py
src/arduinobot_remote/launch/: remote_interface.launch.py
src/arduinobot_remote/src/: task_server.cpp  task_server_main.cpp  task_server_simple.cpp
src/arduinobot_utils/: CMakeLists.txt  package.xml  setup.py  world_markers_publisher.py
src/arduinobot_utils/arduinobot_utils/: angle_conversion.py  ee_markers_publisher.py  world_markers_publisher.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/object_detection/: README.md  package.xml  setup.py
src/object_detection/launch/: object_manipulation.launch.py
src/object_detection/object_detection/: arduinobot.urdf.xacro  manipulation_client.py  object_detector.py  simple_task_server.py
(+202 files in other folders)
