<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arduinobot_bringup</name>
  <version>1.0.0</version>
  <description>Top-level launch files for bringing up the complete ArduinoBot system in simulation and with real hardware</description>
  <maintainer email="kjashwanth6@gmail.com">JASHWANTH K</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>arduinobot_controller</exec_depend>
  <exec_depend>arduinobot_description</exec_depend>
  <exec_depend>arduinobot_moveit</exec_depend>
  <exec_depend>arduinobot_remote</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
